feat: translation module (posts, comments, polls, pushes, inbox) — 0.3.0 (#3)
* docs: post & comment auto-translation design spec

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>

* docs: tighten translation spec (poll table guard, sweep helper)

* docs: translation module implementation plan

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>

* feat(backend,cli): translation module — tables, RLS, triggers, sweep helper, CLI registration

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>

* docs: prettier formatting for translation spec and plan

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>

* fix(backend): translation tables readable by authenticated only, matching likes

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>

* feat(backend): shared translation helper (OpenAI structured output, parser, ensureTranslations) + deno CI

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>

* fix(backend): ensureTranslations never half-writes polls, returns null on every failure, missingLocales tested

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>

* feat(backend): translate-one trigger function and daily-translation sweep

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>

* feat(backend): comment pushes and official broadcasts in the recipient's language

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>

* feat(core): translation module config and reader-locale resolver

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>

* feat(core): translation fields on FeedPost, ThreadComment and PollOption

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>

* feat(core): embed reader-locale translations in feed/thread selects; locale in query keys

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>

* feat(core): inbox excerpts in the reader locale; community_translation_toggled event

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>

* fix(core): warn when inbox translations query fai